--- a/EVD-HandyVision-v3/HandyVisionAndroid/app/src/main/res/layout/activity_main.xml
+++ b/EVD-HandyVision-v3/HandyVisionAndroid/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,7 @@
         android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center|bottom"
         android:text="test" />
 
 </android.support.design.widget.CoordinatorLayout>
